fixes gaph layout

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
 .background-video{
     width: 100vw;
     height: 100vh;
@@ -12,17 +18,12 @@
     z-index: -2;
 }
 
-.dashboard {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+#line-graph {
+    justify-content: flex-end;
     align-items: flex-start;
-    align-content: space-around;
+    width: 1000px;
 }
 
-.graph {
-    align-self: auto;
-    flex: 1 0 25%;
-    margin: 5px;
-}
+// #geo-chart {
+//     back
+// }
